plugins {
    id 'java'

    id 'jvm-test-suite'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

dependencies {
    implementation project(':code:common:service-discovery')
    implementation project(':code:common:service-client')
    implementation project(':code:libraries:big-string')
    implementation project(':code:libraries:braille-block-punch-cards')

    implementation libs.bundles.slf4j

    implementation libs.guice
    implementation libs.bundles.gson

    implementation libs.notnull

    implementation libs.commons.lang3

    implementation libs.trove
    implementation libs.fastutil

    implementation libs.rxjava
    implementation libs.bundles.mariadb

    testImplementation libs.bundles.slf4j.test
    testImplementation libs.bundles.junit
    testImplementation libs.mockito
}


